# Finance_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  main.py
dashboard/: Dockerfile  app.py
dashboard/.streamlit/: config.toml
data/: data.db
tests/: conftest.py  test_bot_commands.py  test_bot_gate.py  test_bot_recurring.py  test_bot_user_resolution.py  test_bot_username.py  test_categories.py  test_csrf.py  test_csrf_hmac.py  test_db.py  test_export.py  test_i18n.py  test_migration.py  test_nlp.py  test_parser.py  test_ratelimit.py  test_web_email_required.py  test_web_phase2.py  test_web_phase3.py  test_web_phase4.py  test_web_phase5.py  test_web_scheduler.py
utils/: auth.py  categories.py  db.py  export.py  i18n.py  messages.py  parser.py
web/: Dockerfile  __init__.py  auth.py  bot_username.py  main.py  period.py  ratelimit.py  requirements.txt  scheduler.py  templates_setup.py
web/routes/: admin.py  app_view.py  auth.py  dashboard.py  landing.py  recurring.py  settings.py
web/static/css/: app.css
web/static/js/: app.js
web/templates/: 404.html  base.html  landing.html
web/templates/_partials/: bottomnav.html  topbar.html
web/templates/admin/: index.html
web/templates/app/: _kpi_oob.html  _kpi_strip.html  chat_message.html  index.html  tx_row.html
web/templates/auth/: email_setup.html  login.html  signup.html
web/templates/dashboard/: index.html
web/templates/recurring/: index.html
web/templates/settings/: index.html  link_code.html
