[project]
name = "finance-bot"
# Kept in sync with the VERSION file, which is the source of truth and is
# bumped automatically by CI on release (see .github/workflows/ci.yml).
version = "2.2.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
